--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "socket.io-client": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
